<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bicheng_Todo List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_add_new_item">Add New Items</string>
    <string name="title_activity_view_archived">View Archived Items</string>
    <string name="title_activity_summarized_data">View Summarized Data</string>
    <string name="remove">Remove</string>
    <string name="archive">Archive</string>
    <string name="email">E-mail</string>
    <string name="add">Add</string>
    <string name="view_archived_item">View Archived Item</string>
    <string name="Add_New_Item">Add New Item</string>
    <string name="Summarize_Data">Summarize Data</string>
    <string name="check">Check</string>
    <string name="select_all">Select All</string>
    <string name="select_none">Select None</string>
    <string name="select_inverse">Select Inverse </string>
    <string name="unarchive">Unarchive</string>
    <string name="email_all">Email All Items</string>
    <string name="check_todo_num">Todo Item Checked:  </string>
    <string name="todo_uncheck_num">Todo Item Unchecked:  </string>
    <string name="todo_archived">Todo Item archived:  </string>
    <string name="archived_checked">Archived Item checked:  </string>
    <string name="archived_unchecked">Archived Item unchecked:  </string>

</resources>
